feat: add find products
